Added libgfortran as static linked library.

--- a/ncregrid/Makefile
+++ b/ncregrid/Makefile
@@ -4,7 +4,7 @@ SHELL     = sh
 
 F90       = f95
 F90FLAGS  = -cpp
-LIBS      = -Wl,-Bstatic -lnetcdff -Wl,-Bdynamic -lnetcdf
+LIBS      = -static-libgfortran -Wl,-Bstatic -lnetcdff -Wl,-Bdynamic -lnetcdf
 INCLUDES  = -I/usr/lib64/gfortran/modules
 
 # ----------------------------------------------
