Made changes to build on Debian 8.

--- a/ncregrid/Makefile
+++ b/ncregrid/Makefile
@@ -5,7 +5,11 @@ SHELL     = sh
 F90       = f95
 F90FLAGS  = -cpp
 LIBS      = -static-libgfortran -Wl,-Bstatic -lnetcdff -Wl,-Bdynamic -lnetcdf
-INCLUDES  = -I/usr/lib64/gfortran/modules
+
+# --- Fedora 22 --------------------------------
+#INCLUDES  = -I/usr/lib64/gfortran/modules
+# --- Debian 8 ---------------------------------
+INCLUDES  = -I/usr/include
 
 # ----------------------------------------------
 
