First try to build in conda environment.

--- a/ncregrid/Makefile
+++ b/ncregrid/Makefile
@@ -2,14 +2,16 @@
 export
 SHELL     = sh
 
-F90       = f95
+F90       = gfortran
 F90FLAGS  = -cpp
 LIBS      = -static-libgfortran -Wl,-Bstatic -lnetcdff -Wl,-Bdynamic -lnetcdf
 
 # --- Fedora 22 --------------------------------
 #INCLUDES  = -I/usr/lib64/gfortran/modules
 # --- Debian 8 ---------------------------------
-INCLUDES  = -I/usr/include
+#INCLUDES  = -I/usr/include
+# --- Conda Environment ------------------------
+INCLUDES = # -I../include
 
 # ----------------------------------------------
 
